--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "compose:up": "docker compose -f docker-compose.dev.yml up --build",
     "compose:down": "docker compose -f docker-compose.dev.yml down",
-    "dev": "pnpm -r --parallel dev",
+    "dev": "pnpm -r dev",
     "build": "pnpm -r build"
   },
   "repository": {
