Declare github token in dockerdile

--- a/example.env
+++ b/example.env
@@ -8,7 +8,7 @@ CLIENT_DIST=/workspace/client-dist
 CONFIG_PATH=/workspace/config
 
 # Payload config
-PAYLOAD_ENABLE=fase
+PAYLOAD_ENABLE=false
 PAYLOAD_API_URL=http://<payload-container>:<payload-app>/api
 PAYLOAD_SERVICE_USER=<service-user-email>
 PAYLOAD_SERVICE_PASSWORD=<service-user-pass>
